--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <h1>Header</h1>
     <nav>
         <div class="main-logo">
-            <img src="/images/logo.png" alt="CCA Logo">
+            <a href="/"><img src="/images/logo.png" alt="CCA Logo"></a>
         </div>
         <ul>
             <li><a href="/">Home</a></li>
