Added css layouts

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>CCA News Network</title>
+    <!--<link href="/css/normalize.css" rel="stylesheet">-->
     <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 
-<header>
-    <h1>Header</h1>
+<header class="clearfix">
     <nav>
         <div class="main-logo">
             <a href="/"><img src="/images/logo.png" alt="CCA Logo"></a>
@@ -20,10 +20,9 @@
     </nav>
 </header>
 
-<div class="main-wrapper">
+<div class="main-wrapper clearfix">
 
     <main>
-        <h1>Breaking News</h1>
         <article>
             <h1>First News Story</h1>
             <p>
